fix an issue with the images' url

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           stay productive,<br />
           wherever you are
         </h1>
-        <img src="./vendors/images/illustration-features.svg" alt="features" />
+        <div class="main__introduction__featuresImage"></div>
         <section class="main__introduction__details">
           <article>
             <h2>All platforms, all devices, all your files</h2>
