finish footer section for mobile layout

--- a/index.html
+++ b/index.html
@@ -94,11 +94,118 @@
           extremely generou. If you have any questions, our support team would
           be happy to help you
         </p>
-        <form method="get" action="#">
+        <form class="signUpForm" method="get" action="#">
           <input type="email" placeholder="email@example.com" />
           <button type="submit" class="greenButton link">Join</button>
         </form>
       </section>
     </main>
+    <footer>
+      <div class="footer__background"></div>
+      <section class="container footer">
+        <section class="footer__details">
+          <a class="logo" href="#"
+            ><img src="./vendors/images/logo.svg" alt="fylo-logo"
+          /></a>
+          <div>
+            <img src="./vendors/images/icon-phone.svg" alt="phone" />
+            <a href="tel:+1-543-123-4567" target="_blank"
+              >Phone: +1-543-123-4567</a
+            >
+          </div>
+          <div>
+            <img src="./vendors/images/icon-email.svg" alt="email" />
+            <a href="mailto:exmaple@fylo.com" target="_blank"
+              >exmaple@fylo.com</a
+            >
+          </div>
+        </section>
+        <section>
+          <nav class="footer__navBar">
+            <div>
+              <h3>Fylo</h3>
+              <ul>
+                <li>
+                  <a href="#">
+                    Desktop App
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Mobile App
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Pricing
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Feature
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div>
+              <h3>Company</h3>
+              <ul>
+                <li>
+                  <a href="#">
+                    About Us
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Jobs
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Press
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Blog
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div>
+              <h3>Support</h3>
+              <ul>
+                <li>
+                  <a href="#">
+                    Contact Us
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Terms
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Privacy
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </section>
+        <section>
+          <p>
+            Receive updates from us, including <br />
+            tips and tricks on how to improve <br />
+            your solution
+          </p>
+          <form class="signUpForm" method="GET" action="#">
+            <input type="email" placeholder="email@example.com" />
+            <button class="link greenButton" type="submit">Join</button>
+          </form>
+        </section>
+      </section>
+    </footer>
   </body>
 </html>
