make mobile and tablet breakpoints for header section

--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
         </nav>
         <section>
           <div class="header__image"></div>
-          <h1>
-            All your files in one secure <br />
-            location, accessible <br />
-            anywhere.
-          </h1>
-          <a class="link greenButton" href="#">Get Started</a>
+          <div>
+            <h1>
+              All your files in one secure <br />
+              location, accessible <br />
+              anywhere.
+            </h1>
+            <a class="link greenButton" href="#">Get Started</a>
+          </div>
         </section>
       </div>
     </header>
