make tablet layout for main section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           stay productive,<br />
           wherever you are
         </h1>
+        <div class="main__details__container">
         <div class="main__introduction__featuresImage"></div>
         <section class="main__introduction__details">
           <article>
@@ -89,6 +90,7 @@
           </article>
         </section>
       </section>
+    </div>
       <section class="main__signUp">
         <h1>get early access today</h1>
         <p>
