--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
-    <header>
+    <!-- <header>
       <div class="header__background"></div>
       <div class="container header">
         <nav>
@@ -103,7 +103,7 @@
           <button type="submit" class="greenButton link">Join</button>
         </form>
       </section>
-    </main>
+    </main> -->
     <footer>
       <div class="footer__background"></div>
       <section class="container footer">
