finish footer section for tablet and desktop breakpoints

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
-    <!-- <header>
+    <header>
       <div class="header__background"></div>
       <div class="container header">
         <nav>
@@ -103,26 +103,28 @@
           <button type="submit" class="greenButton link">Join</button>
         </form>
       </section>
-    </main> -->
+    </main>
     <footer>
       <div class="footer__background"></div>
       <section class="container footer">
         <section class="footer__details">
-          <a class="logo" href="#"
-            ><img src="./vendors/images/logo.svg" alt="fylo-logo"
-          /></a>
-          <div>
-            <img src="./vendors/images/icon-phone.svg" alt="phone" />
-            <a href="tel:+1-543-123-4567" target="_blank"
-              >Phone: +1-543-123-4567</a
-            >
-          </div>
-          <div>
-            <img src="./vendors/images/icon-email.svg" alt="email" />
-            <a href="mailto:exmaple@fylo.com" target="_blank"
-              >exmaple@fylo.com</a
-            >
-          </div>
+            <a class="logo" href="#"
+              ><img src="./vendors/images/logo.svg" alt="fylo-logo"
+            /></a>
+            <span>
+              <div>
+                <img src="./vendors/images/icon-phone.svg" alt="phone" />
+                <a href="tel:+1-543-123-4567" target="_blank"
+                  >Phone: +1-543-123-4567</a
+                >
+              </div>
+              <div>
+                <img src="./vendors/images/icon-email.svg" alt="email" />
+                <a href="mailto:exmaple@fylo.com" target="_blank"
+                  >exmaple@fylo.com</a
+                >
+              </div>
+            </span>
         </section>
         <section>
           <nav class="footer__navBar">
