fix an issue with the sizings of header's elements

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <p>
             Receive updates from us, including <br />
             tips and tricks on how to improve <br />
-            your solution
+            your workflow.
           </p>
           <form class="signUpForm" method="GET" action="#">
             <input type="email" placeholder="email@example.com" />
